
	- Synced parser.
	- Fixed ecpglib trying to read one character after end-of-string.
	- Fixed port number setting in regression suite.
	- Added some interval checks to regression suite.
	- Started to cleanup complex tests.

Th Sep 14 09:47:03 CEST 2006

	- Completely removed complex tests.
	- Added missing constuctor/destructor for interval and date.

We Nov 8 10:53:42 CET 2006

	- Applied patch by Peter Harris to free auto_mem struct in ECPGconnect.
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.

Th Jan 25 17:17:01 CET 2007

	- Removed compiler warning due to unneeded unsigned declaration.
	- Removed regression test that triggers those libc precision bugs on some archs.

Fr Feb 2 09:53:48 CET 2007

	- Cleaned up va_list handling. Hopefully this now works on all archs.
	- Applied Magnus Hagander's patch to take away some compiler warnings.

Su Feb 11 16:09:31 CET 2007

	- Fixed multibyte handling as reported by <harada.toshi@oss.ntt.co.jp>.
	- Set ecpg library version to 5.3.

Th Mar 15 08:27:53 CET 2007

	- Made some chars const as proposed by Stefan Huehner <stefan@huehner.org>.
	- Synced parser and keyword lists.
	- Copied two token parsing from backend parser to ecpg parser.
	- Also added a test case for this.

Thu, 29 Mar 2007 11:18:39 +0200

	- Added patch by Magnus Hagander <magnus@hagander.net> to use native
	  win32 threads.
	- Fixed regression tests to run threading tests.

Fri, 27 Apr 08:55:25 CEST 2007

	- Inlined two functions to get rid of va_list problems on some
	  architectures.

Thu, 10 May 09:42:42 CEST 2007

	- Synced parser and keyword list.
	- Renamed update test so it hopefully runs on Vista.
	
Sun, 20 May 2007 22:01:11 +0200

	- Do not try to find local timezone in DecodeDateTime() because the
	  result is not used anyway. This also fixes Vista's build problems.

Sun, 27 May 2007 13:14:39 +0200

	- Changed variable test to not run into infinite loops on backend
	  errors.
	- Set ecpg version to 4.3.1.